SERVER-92193: Negated $geoWithin/$geoIntersects queries should not attempt to use a non-geospatial index  (#25455)

GitOrigin-RevId: cb88024f7ee75327be5e6957be1c45695fb3a216